--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
 
     <!-- Custom Stylesheet -->
     <link rel="stylesheet" href="./styles.css">
+
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <title>Royal Boulangerie</title>
   </head>
   <body>
